# My_shop

./: pyproject.toml
Shop/Shop/: .env.py  config.py  settings.py  urls.py
Shop/app_auth/: urls.py  views.py
Shop/app_auth/templates/app_auth/: login.html  logout.html  register.html
Shop/core/: forms.py  models.py  urls.py  views.py
Shop/core/migrations/: 0001_initial.py  0002_alter_product_created_at.py  0003_alter_product_created_at.py  0004_category_product_image_alter_product_created_at_and_more.py  0005_alter_product_category_alter_product_created_at.py  0006_category_image_alter_product_created_at.py  0007_alter_product_created_at.py  0008_alter_product_created_at.py  0009_alter_product_created_at.py
Shop/core/static/core/: main_test.scss
Shop/core/templates/core/: add_product.html  base.html  catalog.html  index.html  product_detail.html  products.html
