[tool.poetry]
name = "my-shop"
version = "0.1"
description = "Shop_project"
authors = ["fls"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
psycopg2 = "^2.9.9"
datetime = "^5.4"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
